Prevent scrollbars on slideout

--- a/assets/src/css/site-components/_site-component-slideout.scss
+++ b/assets/src/css/site-components/_site-component-slideout.scss
@@ -29,6 +29,7 @@
     left: 0;
     padding: 0 1rem;
     overflow: auto;
+    min-height: 450px;
 }
 
 
